--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>EvalPlus</title>
+    <title>ClassEval Leaderboard</title>
     <meta http-equiv="refresh" content="0; url = ./leaderboard.html" />
 </head>
 
